# plane_seg

./: CMakeLists.txt  README  README.md  find_sensor_position.m  package.xml  test_plane_seg_01.m
edge_detection/: CMakeLists.txt  package.xml
edge_detection/include/edge_detection/: edge_container.h  edge_detection.h
edge_detection/msg/: Edge.msg  EdgeArray.msg
edge_detection/src/: edge_detection.cpp
edge_detection_ros/: CMakeLists.txt  package.xml
edge_detection_ros/include/edge_detection_ros/: edge_detection_ros.h
edge_detection_ros/src/: edge_detection_ros.cpp  edge_detection_ros_node.cpp  fake_edges_publisher.cpp
include/plane_seg/: BlockFitter.hpp  IncrementalPlaneEstimator.hpp  PlaneFitter.hpp  PlaneSegmenter.hpp  RansacGeneric.hpp
plane_seg/: CMakeLists.txt  package.xml
plane_seg/config/: plane_seg.rviz  rooster_elevation_mapping.yaml
plane_seg/include/plane_seg/: BlockFitter.hpp  ImageProcessor.hpp  RectangleFitter.hpp  RobustNormalEstimator.hpp  StepCreator.hpp  Tracker.hpp  Tracker2D.hpp  Types.hpp
plane_seg/src/: BlockFitter.cpp  ImageProcessor.cpp  IncrementalPlaneEstimator.cpp  PlaneSegmenter.cpp  RectangleFitter.cpp  StepCreator.cpp  Tracker.cpp  Tracker2D.cpp  block-fitter.cpp  plane-seg-20150414.cpp  plane-seg-20150422.cpp  plane_seg_test.cpp  plane_seg_test2.cpp  plane_seg_test_ros.cpp
plane_seg_ros/: CMakeLists.txt  package.xml
plane_seg_ros/config/: default.yaml  elevation_map_filters_config.rviz  elevation_map_plane_seg_config.rviz  nth_cloud.yaml  plane_seg.rviz  plane_seg_sequential_config.rviz  rosbag_sequential.yaml
plane_seg_ros/data/terrain/: terrain_close_rect.pcd  terrain_med.pcd  tilted-steps.pcd
plane_seg_ros/data/terrain/anymal/ori_entrance_stair_climb/: 06.pcd
plane_seg_ros/include/plane_seg_ros/: Pass.hpp  Visualizer.hpp  geometry_utils.hpp
plane_seg_ros/launch/: anymal.launch  default.launch  elevation_map_with_plane_seg.launch  nth_cloud.launch  plane_seg_sequential_config.rviz  rosbag_sequential.launch  test.launch  view_plane_seg.launch
plane_seg_ros/src/: Visualizer.cpp  geometry_utils.cpp  plane_seg_ros.cpp  plane_seg_ros_node.cpp
src/: BlockFitter.cpp  PlaneFitter.cpp  RobustNormalEstimator.cpp  block-fitter.cpp  plane-seg-20150414.cpp  plane-seg-20150422.cpp  plane-seg-20150423.cpp  plane_seg_test2.cpp
terrain_simplification/: CMakeLists.txt  README.md  package.xml
terrain_simplification/include/terrain_simplification/: terrain_simplification.hpp
terrain_simplification/src/: terrain_simplification.cpp
terrain_simplification_ros/: CMakeLists.txt  README.md  package.xml
terrain_simplification_ros/config/: config.yaml  filter_chain.yaml
terrain_simplification_ros/include/terrain_simplification_ros/: terrain_simplification_ros.hpp
terrain_simplification_ros/launch/: terrain_simplification_ros.launch  terrain_simplification_ros_service_caller.launch
terrain_simplification_ros/src/: terrain_simplification_ros.cpp  terrain_simplification_ros_node.cpp  terrain_simplification_ros_service_caller.cpp
terrain_simplification_ros/srv/: GetValueAtPosition.srv
