<?xml version="1.0"?>
<package format="2">
  <name>edge_detection</name>
  <version>1.0.0</version>
  <description>
    A gridmap base edge detector
  </description>

  <author>Romeo Orsolino</author>
  <maintainer email="rorsolino@robots.ox.ac.uk">Romeo Orsolino</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_filters</depend>
  <exec_depend>xterm</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_bag</exec_depend>
</package>
