<?xml version="1.0"?>
<package format="2">
  <name>plane_seg</name>
  <version>0.0.0</version>
  <description>The plane seg package</description>

  <maintainer email="mfallon@todo.todo">mfallon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
</package>
