<?xml version="1.0"?>
<package format="2">
  <name>terrain_simplification_ros</name>
  <version>1.0.0</version>
  <description>
    A ROS-based interface to terrain_simplification package.
  </description>

  <author>Oliwier Melon</author>
  <maintainer email="omelon@robots.ox.ac.uk">Oliwier Melon</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_filters</depend>
  <depend>terrain_simplification</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_bag</exec_depend>
  <exec_depend>grid_map_filters_drs</exec_depend><!-- TODO: To be removed as a dependency -->
</package>
